--- a/inject.cabal
+++ b/inject.cabal
@@ -1,5 +1,5 @@
 name:             inject
-version:          0.0.0
+version:          0.1.0
 license:          MIT
 license-file:     LICENSE
 copyright:        (c) 2013 Simon Hengel
@@ -7,6 +7,15 @@ author:           Simon Hengel <sol@typeful.net>
 maintainer:       Simon Hengel <sol@typeful.net>
 build-type:       Simple
 cabal-version:    >= 1.8
+category:         Text
+synopsis:         A minimalistic template engine
+description:      Inject expands shell commands in arbitrary text templates.
+                  .
+                  <https://github.com/sol/inject#readme>
+
+source-repository head
+  type: git
+  location: https://github.com/sol/inject
 
 library
   ghc-options:
